--- a/src/Components/Hero/hero.module.scss
+++ b/src/Components/Hero/hero.module.scss
@@ -1,72 +1,44 @@
+.nav_item{
+    text-decoration: none;
+    color: #ffff;
 
-.container{
-    // padding: 60px 250px 0 231px;
-    // padding should increase w/ screen size
-    height: 100%;
+    &:hover{
+        color: #F07900;
+        
+    }
 }
 
-.logo, .intro{
-    margin-bottom: auto;
+.intro{
+    height: 500px;
 }
 
 .font_small{
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 47px;
+    font-size: 35px; 
 }
 
 .name{
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 94px;
+    font-size: 48px;
+    font-weight: 600;
+}
+
+.bg_image{
+    width: 600px;
+    height: 500px;
+    object-fit: contain;
+    position: absolute;
+    right: -80px;
+    overflow: none;
 }
 
 .job_title{
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 29px;
-    color: #909090;
-}
-
-.links{
-    display: flex;
+    width: max-content;
+    text-decoration: underline;
+    opacity: 0.7; 
 }
 
 .link{
-    display: inline-block;
-    width: 61px;
-    height: 56px;
-    background: #C4C4C4;
-    text-decoration: none;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 30px;
-}
-
-.icon{
-    font-size: 32px;
-}
-
-
-
-.contact_btn{
-    width: 127px;
-    color: #000000;
-    background: #FFFFFF;
-    border-radius: 30px;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 18px;
-    height: 26px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-}
-
-.headshot{
-    position: absolute;
-    z-index: 1;
+    margin: 0 5px;
+    color: #F07900;
+    font-size: 20px;
+    opacity: 1;
 }
