--- a/src/Components/Hero/hero.module.scss
+++ b/src/Components/Hero/hero.module.scss
@@ -1,44 +1,24 @@
-.nav_item{
-    text-decoration: none;
-    color: #ffff;
-
-    &:hover{
-        color: #F07900;
-        
-    }
-}
-
 .intro{
-    height: 500px;
+    gap: 16px;
 }
 
-.font_small{
-    font-size: 35px; 
+.base_info{
+    gap: 8px;
 }
 
-.name{
-    font-size: 48px;
-    font-weight: 600;
+.avatar{
+    width: 80px;
+    height: 80px;
 }
 
-.bg_image{
-    width: 600px;
-    height: 500px;
-    object-fit: contain;
-    position: absolute;
-    right: -80px;
-    overflow: none;
-}
-
-.job_title{
-    width: max-content;
-    text-decoration: underline;
-    opacity: 0.7; 
+.links{
+    display: flex;
+    gap: 16px;
 }
 
 .link{
-    margin: 0 5px;
-    color: #F07900;
-    font-size: 20px;
-    opacity: 1;
+    color: white;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
 }
