--- a/src/Components/Projects/projects.module.scss
+++ b/src/Components/Projects/projects.module.scss
@@ -1,25 +1,54 @@
 .project{
-    height: 200px;
     display: flex;
-    padding: 1.5rem 0;
-}
-.img_container{
-    width: 30%;
-    height: 100%;
 
-    img{
-        width: 100%;
-        height: 145px;
-        object-fit: contain;
+    &_info{
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        margin-right: 15px;
+        gap: 8px;
     }
 }
 
-.project_info{
-    width: 70%;
+.img_container{
+    width: 155px;
+    height: 179px;
+    display: flex;
+    align-items: center;
+
+    & img{
+        width: 100%;
+        border-radius: 10px;
+    }
 }
 
-.project_description{
-    font-size: .8rem;
-    line-height: 20px;
-    opacity: 0.7;
+.site_link{
+    color: white;
+    font-size: 12px;
+}
+
+.cta_btns{
+    font-size: 9px;
+    font-weight: 600;
+    width: 70px;
+    padding: 2px 10px;
+    border-radius: 5px;
+    line-height: 24px;
+    border: none;
+    box-shadow: 0px 0px 2px rgba(91, 115, 139, 0.16), 0px 8px 16px rgba(91, 115, 139, 0.16);
+}
+
+.live_demo_link{
+    background: #4F4F4F;
+    color: rgba(255, 255, 255, 0.7);
+    margin-right: 19px;
+}
+
+.github_project_link{
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+}
+
+.github_link{
+    color: white;
 }
