--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -3,6 +3,30 @@
     margin-right: 16px;
     text-align: center;
     text-decoration: none;
+    position: relative;
+
+    &:hover{
+        color: white;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        border-radius: 4px;
+        background-color: #CC5500;
+        bottom: 0;
+        left: 0;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform .3s ease-in-out;
+      }
+
+      &:hover::before {
+        transform-origin: left;
+        transform: scaleX(1);
+      }
 }
 
 .navbar{
@@ -10,3 +34,8 @@
     margin-left: auto;
     margin-bottom: 23px;
 }
+
+  
+  
+  
+  
