--- a/src/Components/Projects/projects.module.scss
+++ b/src/Components/Projects/projects.module.scss
@@ -1,13 +1,17 @@
 .project{
     display: flex;
+   margin-bottom: 40px;
 
     &_info{
         display: flex;
         flex-direction: column;
         width: 70%;
         margin-right: 15px;
-        gap: 8px;
+        gap: 20px;
     }
+}
+.description{
+    line-height: 22px;
 }
 
 .img_container{
@@ -30,23 +34,37 @@
 .cta_btns{
     font-size: 9px;
     font-weight: 600;
+    display: inline-block;
     width: 70px;
+    height: 28px;
+    text-decoration: none;
+    text-align: center;
     padding: 2px 10px;
     border-radius: 5px;
     line-height: 24px;
     border: none;
     box-shadow: 0px 0px 2px rgba(91, 115, 139, 0.16), 0px 8px 16px rgba(91, 115, 139, 0.16);
+
+   
 }
 
 .live_demo_link{
     background: #4F4F4F;
     color: rgba(255, 255, 255, 0.7);
     margin-right: 19px;
+
+    &:hover{
+        color: white;
+    }
 }
 
 .github_project_link{
     background: rgba(0, 0, 0, 0.7);
     color: white;
+
+    &:hover{
+        color: #CC5500;
+    }
 }
 
 .github_link{
