--- a/src/Components/Skills/skills.module.scss
+++ b/src/Components/Skills/skills.module.scss
@@ -1,18 +1,19 @@
 .skills_list{
     display:  grid;
     grid-template-columns: repeat(5, 85px);
-    grid-template-rows: repeat(2, 95px);
+    grid-template-rows: repeat(2, 85px);
     gap: 32px;
     width: max-content;
     align-items: center;
 
     & div{
+        height: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
     }
 }
 
-.skill_header{
-    margin-bottom: 48px;
+.skill_name{
+    margin-top: auto;
 }
