--- a/src/main.scss
+++ b/src/main.scss
@@ -20,7 +20,13 @@
 .content{
     display: flex;
     flex-direction: column;
-    gap: 96px;
+    gap: 32px;
+    padding-bottom: 64px;
+}
+
+.header_mb,
+.section{
+    margin-bottom: 32px;
 }
 
 .fs_big{
@@ -39,23 +45,37 @@
     color: rgba(255, 255, 255, 0.5);
 }
 
-.projects{
-    display: flex;
-    flex-direction: column;
-    gap: 48px;
+.divider {								
+    display: table; 
+    font-size: 24px; 
+    text-align: center; 
+    width: 75%; 						
+    margin: 0 auto;					
+    align-items: center;
 }
-
-
-
-// @include media-breakpoint-up(sm) { ... }
-// @include media-breakpoint-up(md) { ... }
-// @include media-breakpoint-up(lg) { ... }
-// @include media-breakpoint-up(xl) { ... }
-@include media-breakpoint-up(xxl) {
-    .black_bg{
-        height: 1000px;
-        left: 70%;
-        top: -192px;
-        transform: rotate(9.67deg);
-    }
+.divider span { display: table-cell; position: relative; }
+.divider span:first-child, .divider span:last-child {
+    width: 50%;
+    top: 20px;							
+    -moz-background-size: 100% 2px; 	
+    background-size: 100% 2px; 			
+    background-position: 0 0, 0 100%;
+    background-repeat: no-repeat;
+}
+.divider span:first-child {				
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#CC5500));
+    background-image: -webkit-linear-gradient(180deg, transparent, #CC5500);
+    background-image: -moz-linear-gradient(180deg, transparent, #CC5500);
+    background-image: -o-linear-gradient(180deg, transparent, #CC5500);
+    background-image: linear-gradient(90deg, transparent, #CC5500);
+}
+.divider span:nth-child(2) {
+    color: #000; padding: 0px 5px; width: auto; white-space: nowrap;
+}
+.divider span:last-child {				
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#CC5500), to(transparent));
+    background-image: -webkit-linear-gradient(180deg, #CC5500, transparent);
+    background-image: -moz-linear-gradient(180deg, #CC5500, transparent);
+    background-image: -o-linear-gradient(180deg, #CC5500, transparent);
+    background-image: linear-gradient(90deg, #CC5500, transparent);
 }
