--- a/src/Components/About/about.module.scss
+++ b/src/Components/About/about.module.scss
@@ -1,10 +1,17 @@
 
 .about_me{
-    display: flex;
-    flex-direction: column;
     background: rgba(128, 128, 128, 0.05);
     border-radius: 24px;
     padding: 24px;
     gap: 24px;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 24px;
+    line-height: 24px;
+    opacity: 0.9;
 }
 
