--- a/src/Components/Projects/projects.module.scss
+++ b/src/Components/Projects/projects.module.scss
@@ -45,12 +45,15 @@
     border: none;
     box-shadow: 0px 0px 2px rgba(91, 115, 139, 0.16), 0px 8px 16px rgba(91, 115, 139, 0.16);
 
-   
+    &:hover{
+        background: #CC5500;
+        transition: background-color .5s ease-out 100ms;
+    }
 }
 
 .live_demo_link{
     background: #4F4F4F;
-    color: rgba(255, 255, 255, 0.7);
+    color: white;
     margin-right: 19px;
 
     &:hover{
@@ -61,10 +64,6 @@
 .github_project_link{
     background: rgba(0, 0, 0, 0.7);
     color: white;
-
-    &:hover{
-        color: #CC5500;
-    }
 }
 
 .github_link{
