--- a/src/Components/Skills/skills.module.scss
+++ b/src/Components/Skills/skills.module.scss
@@ -1,17 +1,9 @@
-.skills_list{
-    display:  grid;
-    grid-template-columns: repeat(5, 85px);
-    grid-template-rows: repeat(2, 85px);
-    gap: 32px;
-    width: max-content;
-    align-items: center;
 
-    & div{
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
+
+.image{
+    width: 50px;
+    height: 50px;
+    object-fit: scale-down;
 }
 
 .skill_name{
